--- a/app/src/main/res/drawable/ic_launcher_foreground.xml
+++ b/app/src/main/res/drawable/ic_launcher_foreground.xml
@@ -1,30 +1,20 @@
 <vector xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:aapt="http://schemas.android.com/aapt"
     android:width="108dp"
     android:height="108dp"
-    android:viewportWidth="108"
-    android:viewportHeight="108">
-    <path android:pathData="M31,63.928c0,0 6.4,-11 12.1,-13.1c7.2,-2.6 26,-1.4 26,-1.4l38.1,38.1L107,108.928l-32,-1L31,63.928z">
-        <aapt:attr name="android:fillColor">
-            <gradient
-                android:endX="85.84757"
-                android:endY="92.4963"
-                android:startX="42.9492"
-                android:startY="49.59793"
-                android:type="linear">
-                <item
-                    android:color="#44000000"
-                    android:offset="0.0" />
-                <item
-                    android:color="#00000000"
-                    android:offset="1.0" />
-            </gradient>
-        </aapt:attr>
-    </path>
+    android:viewportWidth="24"
+    android:viewportHeight="24">
+  <group android:scaleX="0.47"
+      android:scaleY="0.47"
+      android:translateX="6.36"
+      android:translateY="6.36">
     <path
-        android:fillColor="#FFFFFF"
-        android:fillType="nonZero"
-        android:pathData="M65.3,45.828l3.8,-6.6c0.2,-0.4 0.1,-0.9 -0.3,-1.1c-0.4,-0.2 -0.9,-0.1 -1.1,0.3l-3.9,6.7c-6.3,-2.8 -13.4,-2.8 -19.7,0l-3.9,-6.7c-0.2,-0.4 -0.7,-0.5 -1.1,-0.3C38.8,38.328 38.7,38.828 38.9,39.228l3.8,6.6C36.2,49.428 31.7,56.028 31,63.928h46C76.3,56.028 71.8,49.428 65.3,45.828zM43.4,57.328c-0.8,0 -1.5,-0.5 -1.8,-1.2c-0.3,-0.7 -0.1,-1.5 0.4,-2.1c0.5,-0.5 1.4,-0.7 2.1,-0.4c0.7,0.3 1.2,1 1.2,1.8C45.3,56.528 44.5,57.328 43.4,57.328L43.4,57.328zM64.6,57.328c-0.8,0 -1.5,-0.5 -1.8,-1.2s-0.1,-1.5 0.4,-2.1c0.5,-0.5 1.4,-0.7 2.1,-0.4c0.7,0.3 1.2,1 1.2,1.8C66.5,56.528 65.6,57.328 64.6,57.328L64.6,57.328z"
-        android:strokeWidth="1"
-        android:strokeColor="#00000000" />
+        android:pathData="M20.829,10.715L20.312,12.647C19.707,14.902 19.405,16.03 18.72,16.761C18.18,17.339 17.48,17.743 16.709,17.922C16.613,17.945 16.515,17.962 16.415,17.974C15.5,18.087 14.383,17.788 12.351,17.243C10.096,16.639 8.968,16.337 8.237,15.652C7.659,15.111 7.255,14.411 7.076,13.641C6.848,12.665 7.15,11.538 7.755,9.283L8.272,7.351C8.359,7.027 8.44,6.725 8.516,6.446C8.971,4.78 9.277,3.863 9.864,3.237C10.404,2.659 11.104,2.255 11.875,2.076C12.85,1.848 13.978,2.15 16.233,2.755C18.488,3.359 19.616,3.661 20.347,4.346C20.924,4.887 21.329,5.587 21.508,6.357C21.736,7.333 21.434,8.46 20.829,10.715ZM11.052,9.806C11.16,9.406 11.571,9.168 11.971,9.276L16.801,10.57C17.201,10.677 17.438,11.088 17.331,11.488C17.224,11.888 16.813,12.126 16.412,12.019L11.583,10.724C11.183,10.617 10.945,10.206 11.052,9.806ZM10.276,12.703C10.383,12.303 10.794,12.066 11.194,12.173L14.092,12.95C14.492,13.057 14.729,13.468 14.622,13.868C14.515,14.268 14.104,14.506 13.704,14.398L10.806,13.622C10.406,13.515 10.168,13.103 10.276,12.703Z"
+        android:fillColor="#00e28a"
+        android:fillType="evenOdd"/>
+    <path
+        android:pathData="M16.415,17.975C16.206,18.613 15.84,19.19 15.347,19.652C14.616,20.337 13.488,20.639 11.233,21.243C8.978,21.847 7.85,22.15 6.875,21.922C6.104,21.742 5.404,21.338 4.864,20.761C4.179,20.03 3.876,18.902 3.272,16.647L2.755,14.715C2.15,12.46 1.848,11.333 2.076,10.357C2.255,9.586 2.659,8.886 3.237,8.346C3.968,7.661 5.096,7.359 7.351,6.754C7.777,6.64 8.164,6.536 8.516,6.445C8.516,6.445 8.516,6.445 8.516,6.445C8.44,6.725 8.359,7.027 8.272,7.351L7.755,9.283C7.15,11.538 6.848,12.665 7.076,13.641C7.255,14.411 7.659,15.111 8.237,15.652C8.968,16.337 10.096,16.639 12.351,17.243C14.383,17.788 15.5,18.087 16.415,17.975Z"
+        android:strokeAlpha="0.5"
+        android:fillColor="#00e28a"
+        android:fillAlpha="0.5"/>
+  </group>
 </vector>
